--- a/public/posts/2020-12-01-r-rmarkdown/index.Rmd
+++ b/public/posts/2020-12-01-r-rmarkdown/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Hello R Markdown"
-author: "Frida Gomam"
+author: "Son VU"
 date: 2020-12-01T21:13:14-05:00
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
@@ -35,3 +35,5 @@ pie(
   init.angle = -50, border = NA
 )
 ```
+
+
